# kinect_bridge2

./: .gitignore  CMakeLists.txt  kinect-bridge-startup.bat  mainpage.dox  manifest.xml
exe/: CMakeLists.txt
exe/generic_tests/: CMakeLists.txt  test_input_tcp_device.cpp  test_input_tcp_device2.cpp  test_output_tcp_device.cpp  test_tcp_client.cpp  test_tcp_client_bandwidth.cpp  test_tcp_server.cpp
exe/kinect_client/: CMakeLists.txt  kinect_client.cpp
exe/kinect_server/: CMakeLists.txt  grammar.grxml  kinect_logger.cpp  kinect_server.cpp  test_kinect_device_RGB.cpp  test_kinect_device_audio.cpp  test_kinect_device_depth.cpp  test_kinect_device_infrared.cpp  test_kinect_device_skeleton.cpp  test_kinect_device_speech.cpp
include/atomics/: array.h  assert.h  binary_stream.h  exceptions.h  handle.h  mem_block.h  mem_pool_buffer.h  memory_block_allocator.h  memory_pool_allocator.h  print.h  wrapper.h
include/kinect_common/: d2d_device.h  d2d_renderer.h  direct_2d.h  exceptions.h  image_renderer.h  kinect.h  kinect_audio_stream.h  kinect_device.h  memory.h  windows.h
include/messages/: audio_message.h  binary_codec.h  binary_message.h  codec.h  container_messages.h  exceptions.h  geometry_messages.h  gzip_codec.h  image_message.h  input_file_device.h  input_tcp_device.h  io_file_device.h  kinect_messages.h  macros.h  message.h  message_coder.h  output_file_device.h  output_tcp_device.h  png_image_message.h  serializable_message.h  typedefs.h  utility_messages.h  wav_audio_message.h
launch/: kinect_client.launch  kinect_transforms.launch
msg/: KinectBodies.msg  KinectBody.msg  KinectJoint.msg  KinectSpeech.msg  KinectSpeechPhrase.msg
src/: CMakeLists.txt
src/atomics/: CMakeLists.txt  assert.cpp  binary_stream.cpp  exceptions.cpp  handle.cpp  mem_block.cpp  memory_pool_allocator.cpp  print.cpp  wrapper.cpp
src/kinect_common/: CMakeLists.txt  d2d_device.cpp  direct_2d.cpp  direct_3d.cpp  exceptions.cpp  image_renderer.cpp  kinect.cpp  kinect_audio_stream.cpp  kinect_device.cpp  memory.cpp  windows.cpp
src/messages/: CMakeLists.txt  audio_message.cpp  binary_codec.cpp  binary_message.cpp  codec.cpp  container_messages.cpp  exceptions.cpp  geometry_messages.cpp  gzip_codec.cpp  image_message.cpp  input_file_device.cpp  input_tcp_device.cpp  io_file_device.cpp  kinect_messages.cpp  message.cpp  message_coder.cpp  output_file_device.cpp  output_tcp_device.cpp  png_image_message.cpp  serializable_message.cpp  utility_messages.cpp  wav_audio_message.cpp
